<resources>
    <string name="app_name">MyChildProtectApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="parent_name">Parent name</string>
    <string name="child_name">Child name</string>
    <string name="parent_phone_number">Parent phone</string>
    <string name="child_phone_number">Child phone</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="enter_name">Please enter full name </string>
    <string name="enter_child_name">Please enter full name </string>
    <string name="enter_phone">Please enter phone number </string>
    <string name="enter_child_phone">Please enter phone number </string>

    <string name="check_location">CHECK LOCATION </string>
    <string name="listen_env">LISTEN </string>
    <string name="give_acall">CALL</string>
    <string name="alert">Your Child Needs Your Help</string>
</resources>
